--- a/AleA.cabal
+++ b/AleA.cabal
@@ -40,6 +40,7 @@ library
     , containers
     , extra
     , llvm-tf
+    , megaparsec
     , pretty
     , process
     , split
@@ -61,6 +62,7 @@ executable alea
     , containers
     , extra
     , llvm-tf
+    , megaparsec
     , pretty
     , process
     , split
@@ -82,6 +84,7 @@ test-suite alea-test
     , containers
     , extra
     , llvm-tf
+    , megaparsec
     , pretty
     , process
     , split
