--- a/AleA.cabal
+++ b/AleA.cabal
@@ -39,6 +39,7 @@ library
       base >=4.7 && <5
     , containers
     , extra
+    , haskeline
     , llvm-tf
     , megaparsec
     , pretty
@@ -61,6 +62,7 @@ executable alea
     , base >=4.7 && <5
     , containers
     , extra
+    , haskeline
     , llvm-tf
     , megaparsec
     , pretty
@@ -83,6 +85,7 @@ test-suite alea-test
     , base >=4.7 && <5
     , containers
     , extra
+    , haskeline
     , llvm-tf
     , megaparsec
     , pretty
