--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 steps:
 - script: |
-    sudo apt-get -y install llvm-13
+    apt-get -y install llvm-13
     mkdir -p ~/.local/bin
     curl -L https://get.haskellstack.org/stable/linux-x86_64.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
   displayName: Install Stack
